# polyID

./: .gitignore  MANIFEST.in  README.md  environment.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi_publish.yml  pypi_test_publish.yml  python-publish.yml
data/: example_monomer_smiles.csv  example_polymer_data.csv  example_polymer_data_test.csv  example_polymer_data_train.csv  example_polymer_smiles_test.csv  example_polymer_smiles_train.csv  mordred_fp_descripts.csv  stereopolymer_input_nopush.csv
examples/: 1_generate_polymer_structures.ipynb  2_generate_and_train_models.ipynb  3_evaluate_model_performance_and_DoV.ipynb  custom_preprocessor.ipynb  example_MW_preprocessor.ipynb  example_determine_domain-of-validity.ipynb  example_generate_and_train_models.ipynb  example_generate_polymer_structures.ipynb  example_hierarchical_fingerprints.ipynb  example_predict_with_trained_models.ipynb  fingerprints.py  model_utils.py
polyid/: __init__.py  _version.py  domain_of_validity.py  parameters.py  polyid.py
polyid/models/: __init__.py  base_models.py  callbacks.py  tacticity_models.py
polyid/preprocessors/: __init__.py  features.py  preprocessors.py
tests/: __init__.py  test_multimodel.py  test_preprocessor.py  test_singlemodel.py
tests/test_data/: test_load_kfold_data.csv
tests/test_data/multimodel/: polymer_input.csv
tests/test_data/preprocessors/: 220311_stereo_polymers_DP21_R1.csv
tests/test_data/singlemodel/: df_train.csv  df_validate.csv
