[versioneer]
VCS = git
style = pep440
versionfile_source = polyid/_version.py
versionfile_build = polyid/_version.py
tag_prefix = ''

[options]
install_requires =
    pandas
    rdkit
    tqdm
    nfp
    shortuuid
    scikit-learn==1.3.0
    tensorflow>=2
    m2p
[options.extras_require]
test = pytest
